--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.alexanderschuetz97</groupId>
     <artifactId>LuajLFS</artifactId>
-    <version>1.0</version>
+    <version>1.2</version>
     <packaging>bundle</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -160,7 +160,7 @@
         <dependency>
             <groupId>io.github.alexanderschuetz97</groupId>
             <artifactId>JavaNativeUtils</artifactId>
-            <version>1.1</version>
+            <version>[1.5,)</version>
         </dependency>
         <dependency>
             <groupId>org.apache.bcel</groupId>
